@@ -288,8 +288,8 @@
 #define ID_SHADERS_PRESETS_START        4201
 #define ID_SHADERS_PRESETS_END          4299
 #define ID_NAVIGATE_JUMPTO_SUBITEM_START 4300
-#define ID_NAVIGATE_JUMPTO_SUBITEM_END  4499
-#define ID_VIEW_ZOOM_AUTOFIT_LARGER     4500
+#define ID_NAVIGATE_JUMPTO_SUBITEM_END  4899
+#define ID_VIEW_ZOOM_AUTOFIT_LARGER     4900
 // filters
 #define IDS_FILTER_SETTINGS_CAPTION     7000
 #define IDS_ARS_WASAPI_MODE             7100
